--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,26 +9,22 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      -
-        name: Check plugin and script version
+      - name: Check plugin and script version
         uses: mikefarah/yq@3.4.1
         with:
           cmd: ./scripts/check_version.sh plugin.yaml scripts/install_version.sh ${{ github.ref }}
-      -
-        name: Set up Go
+      - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15
-      -
-        name: Run GoReleaser
+          go-version: 1.19
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
-          args: release --rm-dist
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
